fix: make footer center-aligned

--- a/fadingCarousel/style.css
+++ b/fadingCarousel/style.css
@@ -89,3 +89,11 @@ body {
 	position: absolute;
 	right: 0; top:0;
 }
+
+footer {
+	text-align: center;
+}
+a {
+	font-weight: bold;
+	color: white;
+}
